sidebar: fix horizontal scrollbar appearing

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -140,6 +140,7 @@ body {
 	padding: 0;
 	z-index: 0;
 	.jh-border-box;
+	overflow: hidden;
 }
 
 	.@{jh-namespace} a {
